code25_all/scala/15696843.txt
% scalac -version
Scala compiler version 2.9.1 -- Copyright 2002-2011, LAMP/EPFL

import scala.swing._

object HelloGui extends SimpleSwingApplication {
  def top = new MainFrame {
    title = "Hello World GUI"
    contents = new Button {
      text = "Click me"
    }
  }
}

% scalac HelloGui.scala        
HelloGui.scala:1: error: object swing is not a member of package scala
import scala.swing._
             ^
one error found

import swing._
% scalac HelloGui.scala
HelloGui.scala:1: error: not found: object swing
import swing._
       ^
one error found

